--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -27,6 +27,14 @@ jobs:
           - ruby: "ruby"
             yard: true
             standardrb: true
+          - ruby: "3.4"
+            appraisal: "sidekiq_8.x"
+          - ruby: "3.3"
+            appraisal: "sidekiq_8.0"
+          - ruby: "3.2"
+            appraisal: "sidekiq_7.x"
+          - ruby: "3.0"
+            appraisal: "sidekiq_7.0"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Ruby ${{ matrix.ruby }}
