--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -37,14 +37,13 @@ jobs:
         env:
           MINIO_ROOT_USER: minioadmin
           MINIO_ROOT_PASSWORD: minioadmin
+          MINIO_DOMAIN: localhost
         options: >-
-          --health-cmd "curl -f http://localhost:9000/minio/health/live"
-          --health-interval 5s
+          --health-cmd "curl -f http://localhost:9000/minio/health/live || exit 1"
+          --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-          --entrypoint sh
-          -c
-          "minio server /data"
+          minio server /data --console-address ":9001"
     strategy:
       fail-fast: false
       matrix:
