--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -63,16 +63,21 @@ jobs:
           -e MINIO_ROOT_USER=minioadmin \
           -e MINIO_ROOT_PASSWORD=minioadmin \
           minio/minio server /data --console-address ":9001"
-        timeout=10
-        elapsed=0
-        while [ $elapsed -lt $timeout ]; do
+        echo "Waiting for MinIO to be ready..."
+        max_attempts=20
+        attempt=0
+        while [ $attempt -lt $max_attempts ]; do
           if curl -sf http://localhost:9000/minio/health/live > /dev/null 2>&1; then
-            echo "MinIO is ready"
-            break
+            echo "MinIO is ready after $attempt attempts"
+            exit 0
           fi
-          sleep 0.5
-          elapsed=$((elapsed + 1))
+          attempt=$((attempt + 1))
+          echo "Attempt $attempt/$max_attempts - MinIO not ready yet"
+          sleep 1
         done
+        echo "MinIO failed to start within $max_attempts seconds"
+        docker logs minio
+        exit 1
         if [ $elapsed -ge $timeout ]; then
           echo "MinIO failed to start within ${timeout} seconds"
           exit 1
