--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -44,7 +44,9 @@ jobs:
           - ruby: "3.4"
             appraisal: "sidekiq_8.0"
           - ruby: "3.3"
-            appraisal: "sidekiq_7"
+            appraisal: "sidekiq_7.2"
+          - ruby: "3.2"
+            appraisal: "sidekiq_7.1"
           - ruby: "3.2"
             appraisal: "sidekiq_7.0"
           - ruby: "4.0"
